--- a/carrossel/css/template.css
+++ b/carrossel/css/template.css
@@ -33,6 +33,9 @@ body {
 }
 .carrossel .page img, 
 .carrossel .page hgroup {
+    -o-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
     border-radius: 4px;
 }
@@ -43,8 +46,14 @@ body {
     padding: 0 15px;
     color: white;
     height: 145px;
+    -o-text-shadow: 1px 1px rgba(0, 0, 0, 0.4);
+    -ms-text-shadow: 1px 1px rgba(0, 0, 0, 0.4);
+    -moz-text-shadow: 1px 1px rgba(0, 0, 0, 0.4);
     -webkit-text-shadow: 1px 1px rgba(0, 0, 0, 0.4);
     text-shadow: 1px 1px rgba(0, 0, 0, 0.4);
+    background-image: -o-linear-gradient(top, transparent, black);
+    background-image: -ms-linear-gradient(top, transparent, black);
+    background-image: -moz-linear-gradient(top, transparent, black);
     background-image: -webkit-linear-gradient(top, transparent, black);
     background-image: linear-gradient(top, transparent, black);
 }
@@ -77,9 +86,15 @@ body {
     padding: 15px 0 0 9px;
     cursor: pointer;
     opacity: .7;
+    -o-transition: opacity 200ms linear 0;
+    -ms-transition: opacity 200ms linear 0;
+    -moz-transition: opacity 200ms linear 0;
     -webkit-transition: opacity 200ms linear 0;
     transition: opacity 200ms linear 0;
     border-top: solid 1px #707070;
+    background-image: -o-linear-gradient(top, #535353, #000);
+    background-image: -ms-linear-gradient(top, #535353, #000);
+    background-image: -moz-linear-gradient(top, #535353, #000);
     background-image: -webkit-linear-gradient(top, #535353, #000);
     background-image: linear-gradient(top, #535353, #000);
 }
@@ -88,12 +103,18 @@ body {
 }
 .carrossel .left {
     left: 0;
+    -o-border-radius: 0 4px 4px 0;
+    -ms-border-radius: 0 4px 4px 0;
+    -moz-border-radius: 0 4px 4px 0;
     -webkit-border-radius: 0 4px 4px 0;
     border-radius: 0 4px 4px 0;
     border-right: solid 1px #272727;
 }
 .carrossel .right {
     right: 0;
+    -o-border-radius: 4px 0 0 4px;
+    -ms-border-radius: 4px 0 0 4px;
+    -moz-border-radius: 4px 0 0 4px;
     -webkit-border-radius: 4px 0 0 4px;
     border-radius: 4px 0 0 4px;
     border-left: solid 1px #272727;
